[package]
name = "txcv"
version = "0.1.2"
edition = "2024"
description = "tencent cloud translate console version"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes"] }
futures-util = "0.3"
keyring = "2"
colored = "2"
serde = { version = "1", features = ["derive"] }
tencentcloud = { version = "0.2", default-features = false, features = ["async-std-rustls-tls"] }
clap = { version = "4", features = ["derive", "unstable-styles"] }
anyhow = "1"
requestty = "0.5"
crossterm = "0.26"
