[package]
name = "txcv"
version = "0.1.2"
edition = "2024"
description = "tencent cloud translate console version"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-global-executor = "3.1.0"
async-io = "2.4.0"
futures-util = { version = "0.3", features = ["io"] }
colored = "3.0.0"
serde = { version = "1", features = ["derive"] }
tencentcloud = { version = "0.2", default-features = false, features = ["async-std-rustls-tls"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
requestty = "0.5"
crossterm = "0.28.1"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.2", features = ["async-io", "crypto-rust", "linux-native-async-persistent"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.2", features = ["async-io", "crypto-rust", "apple-native"] }
